src/styles.css
:root {
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color: #f6f6f6;
  background-color: #0e0e10;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

body {
  margin: 0;
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.container {
  margin: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

.text-gradient {
  background: linear-gradient(to right, #f8f8f8 13.87%, #b188e2 60%);
  background-size: 200% 200%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  animation: BreathingGradient 6s cubic-bezier(.46,.03,.52,.96) infinite;
}

@keyframes BreathingGradient {
  0% {background-position: 0% 50%;}
  50% {background-position: 100% 50%;}
  100% {background-position: 0% 50%;}
}

#version {
  display: block;
  font-size: 14px;
  opacity: 0.5;
  margin-top: 10px;
}

.pin-row input {
  text-align: center;
  width: 10px;
  margin: 5px;
}

.account {
  align-items: center;
}

.account img {
  height: 50px;
  margin-right: 10px;
  border-radius: 100%;
}

#chat-list {
  padding-top: 15px;
}

.chatlist-contact {
  display: flex;
  border-style: solid;
  border-color: rgba(193, 147, 219, 0.24);
  border-radius: 30px;
  border-width: 1px;
  cursor: pointer;
  justify-content: left;
  height: 50px;
  padding: 5px;
  margin-bottom: 10px;
}

.chatlist-contact-preview {
  margin-top: auto;
  margin-bottom: auto;
  max-width: 250px;
}

.chatlist-contact img {
  width: auto;
  height: 100%;
  border-radius: 100%;
}

.chatlist-contact-preview h4 {
  padding-left: 15px;
  padding-right: 15px;
  margin-top: auto;
  margin-bottom: auto;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: left;
}

.chatlist-contact-preview p {
  opacity: 0.6;
  margin: 0;
  margin-left: 15px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  text-align: left;
}

#chat-new {
  padding: 5px;
}

.chats {
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 15px;
}

.back-btn {
  position: absolute;
  cursor: pointer;
  left: 10px;
  top: 18px;
  margin: 0;
  color: rgba(167, 137, 204, 1);
  z-index: 10;
}

.chat-contact-with-status {
  display: block;
  max-width: 100%;
  font-weight: bold;
  margin-top: 8px;
  margin-bottom: 0;
}

.chat-contact {
  display: block;
  max-width: 100%;
  font-weight: bold;
  margin-top: 20px;
  margin-bottom: 12px;
}

#chat-contact-status {
  opacity: 0.8;
  font-style: oblique;
  font-size: 14px;
  margin-bottom: 2px;
  display: block;
}

.chat-messages {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  overflow-y: scroll;
  background-color: #040308;
  height: 462px;
  padding-left: 10px;
  padding-right: 10px;
  border-top-style: solid;
  border-top-color: rgba(167, 137, 204, 0.75);
  border-top-width: 1px;
}

.msg-inline-timestamp {
  width: 100%;
  text-align: center;
  font-size: 14px;
}

.msg-me {
  display: flex;
  align-self: flex-end;
}

.msg-them img {
  height: 50px;
  width: auto;
  border-radius: 100%;
  margin-top: 15px;
  margin-right: 10px;
}

.msg-me p {
  text-align: left;
  max-width: 300px;
  border-radius: 15px;
  background: linear-gradient(157deg, rgba(29,29,117,0.5) 45%, rgba(118,33,129,0.5) 100%);
  padding: 12px;
  border-bottom-right-radius: 0px;
  word-break: break-word;
}

.msg-them p {
  text-align: left;
  max-width: 300px;
  border-radius: 15px;
  background-color: #24252a;
  padding: 12px;
  border-bottom-left-radius: 0px;
  word-break: break-word;
}

.emoji-only {
  font-size: 75px;
  /* Typically I recommend against !important, but this is the only element in `msg-them` we're force-overriding */
  background: none !important;
  padding-left: 0;
  margin-top: 25px;
  margin-bottom: 25px;
}

.msg-them {
  align-self: flex-start;
  display: flex;
}

.add-reaction {
  cursor: pointer;
  opacity: 0;
  font-size: 25px;
  transition: opacity 0.1s;
}

.msg-them:hover .add-reaction  {
  opacity: 0.75;
}

#chat-box {
  width: 100%;
  background-color: #251134ff;
  height: 55px;
}

#chat-input {
  width: 85%;
  resize: none;
  overflow: hidden;
  height: 20px;
  padding: 10px;
}

.emoji-button {
  font-size: 30px;
  padding: 0;
  padding-left: 12px;
  padding-right: 10px;
  background-color: transparent;
}

.emoji-picker {
  display: none;
  position: absolute;
  z-index: 1000;
  background: #251134e3;
  padding: 10px;
  width: 200px;
  max-height: 200px;
  overflow-y: auto;
  border-radius: 8px;
  border-color: #1e0d2aff;
  border-style: solid;
  backdrop-filter: blur(4px);
}

.emoji-picker-message-type {
  border-bottom: none;
  border-right: none;
  border-radius: 0;
  border-top-left-radius: 8px;
}

.emoji-picker input {
  width: -webkit-fill-available;
  height: 12px;
  margin-bottom: 12px;
}

.emoji-picker span {
  cursor: pointer;
  opacity: 1;
  padding: 6px;
  font-size: 30px;
  border-radius: 100%;
  display: inline-block;
}

.emoji-picker span:hover {
  opacity: 0.8;
  background: #0000003f;
}

.row {
  display: flex;
  justify-content: center;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

h1 {
  text-align: center;
}

input[type=number]::-webkit-outer-spin-button,
input[type=number]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input,
textarea,
button {
  outline: none;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  color: #ffffff;
  background-color: #593b6f99;
  transition: border-color 0.25s;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
}

button {
  cursor: pointer;
}

button:active {
  background-color: #0f0f0f69;
}

#login-input {
  margin-right: 5px;
}

